# aw-daily-reporter

./: .gitignore  CLAUDE.md  PROJECT.md  README.ja.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  test_mapping.py
.agent/rules/: clean-root.md  git.md  python.md  react-nextjs-rule.md  roadmap.md  testing.md  typescript.md
.agent/workflows/: commit.md  complete-pr.md  create-pr.md  merge-into-main.md  process-dependabot.md  start-task.md
.github/: dependabot.yml
.github/workflows/: ci.yml  complexity-check.yml  e2e-tests.yml  e2e.yml  secret-scanning.yml  security-audit.yml  semgrep.yml
aw_daily_reporter/: __init__.py  __main__.py  core.py
aw_daily_reporter/data/: __init__.py
aw_daily_reporter/locales/: messages.pot
aw_daily_reporter/plugins/: base.py  config.py  manager.py  processor_afk.py  processor_compression.py  processor_project_extractor.py  processor_project_mapping.py  processor_rule_matching.py  renderer_ai.py  renderer_json.py  renderer_markdown.py  scanner_git.py  schemas.py
aw_daily_reporter/shared/: __init__.py  constants.py  date_utils.py  i18n.py  logging.py  settings_manager.py
aw_daily_reporter/timeline/: __init__.py  __main__.py  client.py  generator.py  merger.py  models.py  processor.py
docs/: development.md  e2e-testing.md  frontend-audit.md  frontend-testing-strategy.md  git.md  logging.md  performance-improvement.md  release.md  requirements.md  settings-architecture.md  specs.md
tests/: conftest.py  reproduce_day_start.py  test_plugin_order.py  verify_project_extractor.py
tests/integration/: test_components.py  test_report_flow.py  test_server.py
tests/unit/: test_client.py  test_core.py  (+16 more)
(+131 files in other folders)
